--- a/upload/catalog/view/theme/medic/template/common/cart.twig
+++ b/upload/catalog/view/theme/medic/template/common/cart.twig
@@ -66,7 +66,8 @@
                     </tbody></table>
             </div>
 
-            <div class="checkout"><a href="{{ cart }}" class="button btn-default">{{ text_cart }}</a> &nbsp;<a href="{{ checkout }}" class="button">{{ text_checkout }}</a></div>
+            <div class="checkout"><a href="{{ cart }}" class="button btn-default">{{ text_cart }}</a> &nbsp;
+                <a href="{{ checkout }}" class="button">{{ text_checkout }}</a></div>
             {% else %}
                 <div class="empty">{{ text_empty }}</div>
             {% endif %}
