--- a/upload/catalog/view/theme/military/template/account/edit.twig
+++ b/upload/catalog/view/theme/military/template/account/edit.twig
@@ -1,6 +1,6 @@
 {{ header }}
 <!-- BREADCRUMB
-================================================== -->
+	================================================== -->
 <div class="breadcrumb full-width">
     <div class="background-breadcrumb"></div>
     <div class="background">
@@ -8,7 +8,7 @@
         <div class="pattern">
             <div class="container">
                 <div class="clearfix">
-                    <h1 id="title-page"> {{ heading_title }} </h1>
+                    <h1 id="title-page">{{ heading_title }}</h1>
 
                     <ul>
                         {% for breadcrumb in breadcrumbs %}
@@ -21,6 +21,7 @@
         </div>
     </div>
 </div>
+
 <!-- MAIN CONTENT
 	================================================== -->
 <div class="main-content full-width inner-page">
@@ -47,13 +48,14 @@
                             {% endif %}
                             <div class="{{ class }} center-column content-with-background" id="content">
                                 {{ content_top }}
+
                                 <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
                                     <fieldset>
                                         <legend>{{ text_your_details }}</legend>
                                         <div class="form-group required">
                                             <label class="col-sm-2 control-label" for="input-firstname">{{ entry_firstname }} </label>
                                             <div class="col-sm-10">
-                                                <input type="text" name="firstname" value="{{ firstname }}" placeholder="{{ entry_firstname }}" id="input-firstname" class="form-control" />
+                                                <input type="text" name="firstname" value="{{ firstname }}" placeholder="{{ entry_firstname }}" id="input-firstname" class="form-control">
                                                 {% if error_firstname %}
                                                     <div class="text-danger">{{ error_firstname }}</div>
                                                 {% endif %}
@@ -62,7 +64,7 @@
                                         <div class="form-group required">
                                             <label class="col-sm-2 control-label" for="input-lastname">{{ entry_lastname }}</label>
                                             <div class="col-sm-10">
-                                                <input type="text" name="lastname" value="{{ lastname }}" placeholder="{{ entry_lastname }}" id="input-lastname" class="form-control" />
+                                                <input type="text" name="lastname" value="{{ lastname }}" placeholder="{{ entry_lastname }}" id="input-lastname" class="form-control">
                                                 {% if error_lastname %}
                                                     <div class="text-danger">{{ error_lastname }}</div>
                                                 {% endif %}
@@ -71,7 +73,7 @@
                                         <div class="form-group required">
                                             <label class="col-sm-2 control-label" for="input-email">{{ entry_email }}</label>
                                             <div class="col-sm-10">
-                                                <input type="email" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
+                                                <input type="email" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control">
                                                 {% if error_email %}
                                                     <div class="text-danger">{{ error_email }}</div>
                                                 {% endif %}
@@ -80,7 +82,7 @@
                                         <div class="form-group required">
                                             <label class="col-sm-2 control-label" for="input-telephone">{{ entry_telephone }}</label>
                                             <div class="col-sm-10">
-                                                <input type="tel" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control" />
+                                                <input type="tel" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control">
                                                 {% if error_telephone %}
                                                     <div class="text-danger">{{ error_telephone }}</div>
                                                 {% endif %}
@@ -245,7 +247,7 @@
                                         </div>
                                     </div>
                                 </form>
-                                {{ content_bottom }}
+
                                 <script type="text/javascript"><!--
                                     // Sort the custom fields
                                     $('.form-group[data-sort]').detach().each(function() {
@@ -331,8 +333,11 @@
                                     //--></script>
 
                             </div>
+
+
                             {{ column_right }}
                         </div>
+
                     </div>
                 </div>
 
