--- a/upload/catalog/view/theme/military/template/account/newsletter.twig
+++ b/upload/catalog/view/theme/military/template/account/newsletter.twig
@@ -1,6 +1,6 @@
 {{ header }}
 <!-- BREADCRUMB
-================================================== -->
+	================================================== -->
 <div class="breadcrumb full-width">
     <div class="background-breadcrumb"></div>
     <div class="background">
@@ -8,7 +8,7 @@
         <div class="pattern">
             <div class="container">
                 <div class="clearfix">
-                    <h1 id="title-page"> {{ heading_title }} </h1>
+                    <h1 id="title-page">{{ heading_title }}</h1>
 
                     <ul>
                         {% for breadcrumb in breadcrumbs %}
@@ -21,6 +21,7 @@
         </div>
     </div>
 </div>
+
 <!-- MAIN CONTENT
 	================================================== -->
 <div class="main-content full-width inner-page">
@@ -47,21 +48,26 @@
                             {% endif %}
                             <div class="{{ class }} center-column content-with-background" id="content">
                                 {{ content_top }}
-                                {% if error_warning %}
-                                <div class="warning">
-                                    <button type="button" class="close" data-dismiss="alert">×</button>
-                                    {{ error_warning }}
-                                </div>
-                                {% endif %}
-
-                                <p>{{ text_email }}</p>
                                 <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
                                     <fieldset>
-                                        <legend>{{ text_your_email }}</legend>
-                                        <div class="form-group required">
-                                            <label class="col-sm-2 control-label" for="input-email">{{ entry_email }}</label>
+                                        <div class="form-group">
+                                            <label class="col-sm-2 control-label">{{ entry_newsletter }}</label>
                                             <div class="col-sm-10">
-                                                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control">
+                                                {% if newsletter %}
+                                                    <label class="radio-inline">
+                                                        <input type="radio" name="newsletter" value="1" checked="checked">
+                                                        {{ text_yes }} </label>
+                                                    <label class="radio-inline">
+                                                        <input type="radio" name="newsletter" value="0" >
+                                                        {{ text_no }}</label>
+                                                {% else %}
+                                                    <label class="radio-inline">
+                                                        <input type="radio" name="newsletter" value="1">
+                                                        {{ text_yes }} </label>
+                                                    <label class="radio-inline">
+                                                        <input type="radio" name="newsletter" value="0" checked="checked" >
+                                                        {{ text_no }}</label>
+                                                {% endif %}
                                             </div>
                                         </div>
                                     </fieldset>
@@ -72,10 +78,8 @@
                                         </div>
                                     </div>
                                 </form>
-
+                                {{ content_bottom }}
                             </div>
-
-
                             {{ column_right }}
                         </div>
 
