--- a/upload/catalog/view/theme/military/template/account/password.twig
+++ b/upload/catalog/view/theme/military/template/account/password.twig
@@ -1,6 +1,6 @@
 {{ header }}
 <!-- BREADCRUMB
-================================================== -->
+	================================================== -->
 <div class="breadcrumb full-width">
     <div class="background-breadcrumb"></div>
     <div class="background">
@@ -8,7 +8,7 @@
         <div class="pattern">
             <div class="container">
                 <div class="clearfix">
-                    <h1 id="title-page"> {{ heading_title }} </h1>
+                    <h1 id="title-page">{{ heading_title }}</h1>
 
                     <ul>
                         {% for breadcrumb in breadcrumbs %}
@@ -21,6 +21,7 @@
         </div>
     </div>
 </div>
+
 <!-- MAIN CONTENT
 	================================================== -->
 <div class="main-content full-width inner-page">
@@ -46,22 +47,28 @@
                                 {% set class = 'col-sm-12' %}
                             {% endif %}
                             <div class="{{ class }} center-column content-with-background" id="content">
-                                {{ content_top }}
-                                {% if error_warning %}
-                                <div class="warning">
-                                    <button type="button" class="close" data-dismiss="alert">×</button>
-                                    {{ error_warning }}
-                                </div>
-                                {% endif %}
 
-                                <p>{{ text_email }}</p>
+
+
                                 <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
                                     <fieldset>
-                                        <legend>{{ text_your_email }}</legend>
+                                        <legend>{{ text_password }}</legend>
                                         <div class="form-group required">
-                                            <label class="col-sm-2 control-label" for="input-email">{{ entry_email }}</label>
+                                            <label class="col-sm-2 control-label" for="input-password">{{ entry_password }}</label>
                                             <div class="col-sm-10">
-                                                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control">
+                                                <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control">
+                                                {% if error_password %}
+                                                    <div class="text-danger">{{ error_password }}</div>
+                                                {% endif %}
+                                            </div>
+                                        </div>
+                                        <div class="form-group required">
+                                            <label class="col-sm-2 control-label" for="input-confirm">{{ entry_confirm }}</label>
+                                            <div class="col-sm-10">
+                                                <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" class="form-control">
+                                                {% if error_confirm %}
+                                                    <div class="text-danger">{{ error_confirm }}</div>
+                                                {% endif %}
                                             </div>
                                         </div>
                                     </fieldset>
@@ -72,7 +79,7 @@
                                         </div>
                                     </div>
                                 </form>
-
+                                {{ content_bottom }}
                             </div>
 
 
