--- a/upload/catalog/view/theme/military/template/common/footer.twig
+++ b/upload/catalog/view/theme/military/template/common/footer.twig
@@ -17,29 +17,29 @@
                                         <div class="row footer-blocks-top">
                                             <div class="col-sm-4 text-center">
                                                 <div class="footer-block">
-                                                    <img src="./Your Store_files/icon-mail.png" alt="Mail">
+                                                    <img src="/catalog/view/theme/military/image/icon-mail.png" alt="Mail">
                                                     <div class="footer-block-content">
                                                         <h6 style="font-size: 17px;color: #6d7156;line-height: 1.3">Do
                                                             you have any question?</h6>
-                                                        <p>email.example@gmail.com</p>
+                                                        <p>{{ email }}</p>
                                                     </div>
                                                 </div>
                                             </div>
 
                                             <div class="col-sm-4 text-center">
                                                 <div class="footer-block">
-                                                    <img src="./Your Store_files/icon-phone.png" alt="Phone">
+                                                    <img src="/catalog/view/theme/military/image/icon-phone.png" alt="Phone">
                                                     <div class="footer-block-content">
                                                         <h6 style="font-size: 17px;color: #f8a72b;line-height: 1.3">
-                                                            800-140-100</h6>
-                                                        <p>Mon - Fri: 8:00 - 17:00</p>
+                                                            {{ telephone }}
+                                                        </h6>
                                                     </div>
                                                 </div>
                                             </div>
 
                                             <div class="col-sm-4 text-center">
-                                                <a href="http://fastortheme.com/military/index.php?route=information/contact"
-                                                   class="footer-button">Contact form</a>
+                                                <a href="{{ contact }}" class="footer-button">{{ text_contact }}
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -47,64 +47,67 @@
                                 <div class="row">
                                     <div class="col-sm-3">
                                         <div class="footer-about-us">
-                                            <img src="./Your Store_files/logo-footer.png" alt="Fastor">
-                                            <h6 style="color: #6d7156">PO Box 16122 Collins Street <br>Victoria 8007
-                                                Australia</h6>
+                                            <img src="/catalog/view/theme/military/image/logo-footer.png" alt="Fastor">
+                                            <h6 style="color: #6d7156">
+                                                PO Box 16122 Collins Street <br>Victoria 8007
+                                                Australia
+                                            </h6>
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
-                                        <h4>Information</h4>
-                                        <div class="strip-line"></div>
-                                        <div class="row" style="clear: both">
-                                            <div class="col-sm-12">
-                                                <ul>
-                                                    <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=information/information&amp;information_id=4">About
-                                                            us</a></li>
-                                                    <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=information/information&amp;information_id=6">Delivery
-                                                            information</a></li>
-                                                    <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=information/information&amp;information_id=3">Privacy
-                                                            Policy</a></li>
-                                                </ul>
+                                    {% if informations %}
+
+                                        <div class="col-sm-3">
+                                            <h4>{{ text_information }}</h4>
+                                            <div class="strip-line"></div>
+                                            <div class="row" style="clear: both">
+                                                <div class="col-sm-12">
+                                                    <ul>
+                                                        {% for information in informations %}
+
+                                                            <li>
+                                                                <a href="{{ information.href }}">{{ information.title }}
+                                                                </a>
+                                                            </li>
+                                                        {% endfor %}
+
+                                                    </ul>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    {% endif %}
                                     <div class="col-sm-3">
-                                        <h4>My account</h4>
+                                        <h4>{{ text_account }}</h4>
                                         <div class="strip-line"></div>
                                         <div class="row" style="clear: both">
                                             <div class="col-sm-12">
                                                 <ul>
                                                     <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=account/account">My
-                                                            account</a></li>
-                                                    <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=account/order">Order
-                                                            History</a></li>
-                                                    <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=account/wishlist">Wish
-                                                            List</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <h4>Custom links</h4>
-                                        <div class="strip-line"></div>
-                                        <div class="row" style="clear: both">
-                                            <div class="col-sm-12">
-                                                <ul>
-                                                    <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=information/information&amp;information_id=5">Terms
-                                                            &amp; Conditions</a></li>
-                                                    <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=information/contact">Contact
-                                                            Us</a></li>
-                                                    <li>
-                                                        <a href="http://fastortheme.com/military/index.php?route=information/sitemap">Sitemap</a>
+                                                        <a href="{{ account }}">
+                                                            {{ text_account }}
+                                                        </a>
                                                     </li>
+                                                    <li>
+                                                        <a href="{{ order }}">{{ text_order }}</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="{{ wishlist }}">{{ text_wishlist }}</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="{{ newsletter }}">{{ text_newsletter }}</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <h4>{{ text_service }}</h4>
+                                        <div class="strip-line"></div>
+                                        <div class="row" style="clear: both">
+                                            <div class="col-sm-12">
+                                                <ul>
+                                                    <li><a href="{{ contact }}">{{ text_contact }}</a></li>
+                                                    <li><a href="{{ return }}">{{ text_return }}</a></li>
+                                                    <li><a href="{{ sitemap }}">{{ text_sitemap }}</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -115,7 +118,7 @@
                                         <div class="row footer-blocks-bottom">
                                             <div class="col-sm-4 text-center">
                                                 <div class="footer-block">
-                                                    <img src="./Your Store_files/icon-free-shipping.png"
+                                                    <img src="/catalog/view/theme/military/image/icon-free-shipping.png"
                                                          alt="Free shipping">
                                                     <div class="footer-block-content">
                                                         <h6 style="font-size: 16px;color: #6d7156;line-height: 1.4">Free
@@ -127,7 +130,7 @@
 
                                             <div class="col-sm-4 text-center">
                                                 <div class="footer-block">
-                                                    <img src="./Your Store_files/icon-money.png" alt="Money back">
+                                                    <img src="/catalog/view/theme/military/image/icon-money.png" alt="Money back">
                                                     <div class="footer-block-content">
                                                         <h6 style="font-size: 16px;color: #f8a72b;line-height: 1.4">
                                                             Money back guarantee</h6>
@@ -138,7 +141,7 @@
 
                                             <div class="col-sm-4 text-center">
                                                 <div class="footer-block">
-                                                    <img src="./Your Store_files/icon-support.png" alt="Support">
+                                                    <img src="/catalog/view/theme/military/image/icon-support.png" alt="Support">
                                                     <div class="footer-block-content">
                                                         <h6 style="font-size: 16px;color: #54524e;line-height: 1.4">
                                                             Support 24/7</h6>
@@ -151,7 +154,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <div style="text-align: center">Copyright © 2016, Your Store, All Rights Reserved.
+                                        <div style="text-align: center"> {{ powered }}
                                         </div>
                                     </div>
                                 </div>
@@ -166,7 +169,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="./Your Store_files/megamenu.js"></script>
+<script type="text/javascript" src="/catalog/view/theme/military/js/megamenu.js"></script>
 </div>
 </div>
 
