Signed-off-by: chenghao <06031306@163.com>

--- a/upload/catalog/view/theme/medic/template/extension/module/category.twig
+++ b/upload/catalog/view/theme/medic/template/extension/module/category.twig
@@ -1,5 +1,5 @@
 <div class="box box-with-categories    box-no-advanced">
-  <div class="box-heading">Categories</div>
+  <div class="box-heading">{{ catagories_name }}</div>
   <div class="strip-line"></div>
   <div class="box-content box-category">
     <ul class="accordion" id="accordion-category">
