--- a/upload/catalog/view/theme/medic/template/common/home.twig
+++ b/upload/catalog/view/theme/medic/template/common/home.twig
@@ -7,16 +7,23 @@
         <div class="shadow"></div>
         <div class="pattern">
             <div class="container">
-
+                {{ column_left }}
+                {% if column_left and column_right %}
+                    {% set class = 'col-sm-6' %}
+                {% elseif column_left or column_right %}
+                    {% set class = 'col-sm-9' %}
+                {% else %}
+                    {% set class = 'col-sm-12' %}
+                {% endif %}
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="{{ class }}">
 
 
-                            {{ content_top }}
-
+                        {{ content_top }}
+                        {{ content_bottom }}
                     </div>
                 </div>
-
+                {{ column_right }}
                 <div class="row">
                     <div class="col-sm-12">
 
